2007-03-23    <Daddy@C-3PO>

	* Search.pm: First releasable version
